# verbivore

./: .gitignore  Cargo.toml  LICENSE-MIT  PLAN.md  PLAN_ARCHIVE.md  README.md  SPEC.md
.claude/: settings.json
corpus/: docker-compose.yml  seed.sh  zengarden-mirror.py
corpus/grafana/dashboards/: verbivore-demo.json  verbivore-tables.json  verbivore-tiles.json
corpus/grafana/provisioning/dashboards/: provider.yml
corpus/grafana/provisioning/datasources/: testdata.yml
corpus/kitchen/: bulma.html  fomantic.html  materialize.html  pico.html  uswds.html
corpus/superset/: superset_config.py
crates/verbivore/: Cargo.toml
crates/verbivore-dataset/: Cargo.toml
crates/verbivore-dataset/src/: lib.rs  rank.rs
crates/verbivore-effect/: Cargo.toml
crates/verbivore-effect/src/: gate.rs  lib.rs  models.rs  pair_data.rs  train.rs
crates/verbivore-executor/: Cargo.toml
crates/verbivore-executor/src/: accept.rs  lib.rs  repair.rs
crates/verbivore-executor/tests/: run_fixture.rs
crates/verbivore-generator/: Cargo.toml
crates/verbivore-generator/src/: crawl.rs  generate.rs  lib.rs  probe.rs  propose.rs
crates/verbivore-generator/tests/: canvas_liveness.rs  corpus_check.rs  full_loop.rs  link_visibility.rs
crates/verbivore-grounding/: Cargo.toml
crates/verbivore-grounding/src/: data.rs  decode.rs  eval.rs  lib.rs  loss.rs  model.rs  rank.rs  train.rs
crates/verbivore-grounding/tests/: backend_smoke.rs  data_pipeline.rs  decode.rs  loss.rs  model_shapes.rs  train_overfit.rs
crates/verbivore-harvester/: Cargo.toml
crates/verbivore-harvester/src/: effect_capture.rs  heuristics.rs  input.rs  labels.rs  lib.rs
crates/verbivore-harvester/tests/: corpus.rs  dataset_roundtrip.rs  effect_pairs.rs  heuristics.rs  labels.rs  spike.rs  variations.rs
crates/verbivore-verb/: Cargo.toml
crates/verbivore-verb/src/: lib.rs
crates/verbivore/src/: main.rs
docs/: verb-format.md
fixtures/: noisy.html
scripts/: rotate.sh
