[workspace]
resolver = "3"
members = [
    "crates/verbivore",
    "crates/verbivore-harvester",
    "crates/verbivore-dataset",
    "crates/verbivore-grounding",
    "crates/verbivore-effect",
    "crates/verbivore-executor",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chotchki/verbivore"

# Deps optimized even in dev: debug-build ndarray convs turn a seconds-long
# tensor test into minutes. Our own crates stay debug for real debugging.
[profile.dev.package."*"]
opt-level = 3
