[workspace]
resolver = "3"
members = [
    "crates/verbivore",
    "crates/verbivore-harvester",
    "crates/verbivore-dataset",
    "crates/verbivore-grounding",
    "crates/verbivore-effect",
    "crates/verbivore-executor",
    "crates/verbivore-generator",
    "crates/verbivore-verb",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chotchki/verbivore"

# Deps optimized even in dev: debug-build ndarray convs turn a seconds-long
# tensor test into minutes.
[profile.dev.package."*"]
opt-level = 3

# Our own crates get light optimization in dev too — the decode/eval and pixel
# loops are ours, and speed is the point of this project. Full debugging is a
# one-line `opt-level = 0` away when actually needed.
[profile.dev]
opt-level = 1

# Release keeps enough symbols for a usable panic backtrace.
[profile.release]
lto = "thin"
debug = "line-tables-only"
