[package]
name = "verbivore-dataset"
description = "On-disk dataset format shared by the harvester (writer) and model training (reader)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.104"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
sha2 = "0.11.0"

[dev-dependencies]
tempfile = "3.27.0"
