[package]
name = "verbivore-effect"
description = "Effect validation: did the action visually change the page, or was it a dead click?"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.104"
image = { version = "0.25.10", default-features = false, features = ["png"] }
verbivore-dataset = { version = "0.1.0", path = "../verbivore-dataset" }

[[bin]]
name = "effect-baseline"
path = "src/bin/effect_baseline.rs"
