[package]
name = "verbivore-grounding"
description = "Element grounding: burn-based detector mapping screenshots to interactive elements"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.104"
burn = { version = "0.21", features = ["train", "metal", "ndarray"] }
image = { version = "0.25.10", default-features = false, features = ["png"] }
verbivore-dataset = { version = "0.1.0", path = "../verbivore-dataset" }

[dev-dependencies]
tempfile = "3.27.0"
