[package]
name = "verbivore-grounding"
description = "Element grounding: burn-based detector mapping screenshots to interactive elements"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.104"
burn = { version = "0.21", features = ["train", "metal", "ndarray"] }
image = { version = "0.25.10", default-features = false, features = ["png"] }
tempfile = "3.27.0"
verbivore-dataset = { version = "0.1.0", path = "../verbivore-dataset" }

[dev-dependencies]
tempfile = "3.27.0"

[features]
default = []
# The 2080 Ti path: build with --features cuda on the gpu box. Metal stays the
# default because that's the primary dev machine.
cuda = ["burn/cuda"]

[[bin]]
name = "train-bench"
path = "src/bin/train_bench.rs"

[[bin]]
name = "train-eval"
path = "src/bin/train_eval.rs"
