[package]
name = "verbivore-harvester"
description = "Drives Chrome via CDP to harvest DOM-labeled screenshots into training data"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.104"
chromiumoxide = "0.9.1"
futures = "0.3.33"
serde_json = "1.0.151"
tokio = { version = "1.53.1", features = ["full"] }
verbivore-dataset = { version = "0.1.0", path = "../verbivore-dataset" }

[dev-dependencies]
tempfile = "3.27.0"
