[package]
name = "verbivore"
description = "Vision-assisted verbs for browser testing: crawl a site, digest it into verbs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.104"
burn = { version = "0.21", features = ["metal"] }
clap = { version = "4.6.4", features = ["derive"] }
tokio = { version = "1.53.1", features = ["rt-multi-thread", "macros"] }
verbivore-dataset = { version = "0.1.0", path = "../verbivore-dataset" }
verbivore-effect = { version = "0.1.0", path = "../verbivore-effect" }
verbivore-harvester = { version = "0.1.0", path = "../verbivore-harvester" }
